# cinematic-vectors

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: cd.yml  ci.yml
api/: Dockerfile  MovieSearch.sln
api/src/MovieSearch.Api/: JwtHelper.cs  MovieSearch.Api.csproj  Program.cs
api/src/MovieSearch.Application/: MovieSearch.Application.csproj
api/src/MovieSearch.Domain/: Models.cs
api/src/MovieSearch.Infrastructure/: McpMovieSearchService.cs  MovieSearch.Infrastructure.csproj
api/tests/MovieSearch.Tests/: HealthTests.cs  MovieSearch.Tests.csproj
database/migrations/: V1__initial_schema.sql  V2__indexes.sql
mcp-server/: Dockerfile  pyproject.toml
mcp-server/src/: config.py
mcp-server/src/server/: db.py  main.py  models.py  tools.py
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: movie-search.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
pipeline/: Dockerfile  alembic.ini  pyproject.toml
pipeline/alembic/: env.py
pipeline/src/: main.py
pipeline/src/pipeline/: augmentation.py  cleaning.py  embedding.py  imputation.py  loader.py
terraform/: main.tf  outputs.tf  variables.tf
terraform/modules/alb/: main.tf
terraform/modules/compute/: main.tf
terraform/modules/ecr/: main.tf
terraform/modules/iam/: main.tf
terraform/modules/networking/: main.tf
terraform/modules/rds/: main.tf
terraform/modules/secrets/: main.tf
