[project]
name = "pipeline"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "vega-datasets",
    "pandas",
    "numpy",
    "httpx",
    "asyncpg",
    "alembic",
    "psycopg2-binary",
    "sqlalchemy",
    "python-dotenv",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy"]

[tool.ruff]
line-length = 88

[tool.mypy]
python_version = "3.12"
strict = true
